# myportfolio

./: README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  comment.html  detail.html  home.html  post.html
myportfolio/: settings.py  urls.py
mysite/mysite/: settings.py
mysite/polls/: urls.py  views.py
