[tool.poetry]
name = "myportfolio"
version = "0.1.0"
description = "A repo for housing the code for my portfolio website"
authors = ["xavierparaujo <xavierparaujo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
